--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Roboto Slab", "Helvetica Neue", "Helvetica", "sans-serif";
+    font-family: "Muli", "Roboto Slab", "Helvetica", "sans-serif";
     font-weight: 700;
 }
 
